z-index bug

--- a/client/index.sass
+++ b/client/index.sass
@@ -22,6 +22,7 @@ body
 
   position: relative
   #bg
+    z-index: -98
     position: absolute
     left: 0
     top:  0
